Prevent superlong words from making info from overflowing

--- a/styles/styles.scss
+++ b/styles/styles.scss
@@ -157,6 +157,7 @@ img {
 
     display: flex;
     flex-direction: column;
+    overflow-x: auto;
 
     justify-content: center;
     align-items: center;
